--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -36,3 +36,8 @@ jobs:
           echo test, and deploy your project.
           pwd
           ls -la 
+  job_2:
+    runs-on: ubuntu-latest
+      steps:
+        - uses: erkenes/php-cs-fixer-action@php8.3-1.0.0
+        - name: hogehoge
